--- a/chip-8-emulator/index.html
+++ b/chip-8-emulator/index.html
@@ -86,6 +86,64 @@
     </div>
 
     <script>
+      //Helper function to map physical keys to CHIP-8 keys
+      function mapKey(key) {
+        switch (key.toLowerCase()) {
+          case "1":
+            return 0x1;
+          case "2":
+            return 0x2;
+          case "3":
+            return 0x3;
+          case "4":
+            return 0xC;
+          case "q":
+            return 0x4;
+          case "w":
+            return 0x5;
+          case "e":
+            return 0x6;
+          case "r":
+            return 0xD;
+          case "a":
+            return 0x7;
+          case "s":
+            return 0x8;
+          case "d":
+            return 0x9;
+          case "f":
+            return 0xE;
+          case "z":
+            return 0xA;
+          case "x":
+            return 0x0;
+          case "c":
+            return 0xB;
+          case "v":
+            return 0xF;
+          default:
+            return null;
+        }
+      }
+
+      //event listener for keydown
+      document.addEventListener("keydown", function (event) {
+        let chip8Key = mapKey(event.key);
+        if (chip8Key !== null) {
+          Module._setKeyState(chip8Key, 1);
+          event.preventDefault();
+        }
+      });
+
+      //event listener for keyup
+      document.addEventListener("keyup", function (event) {
+        let chip8Key = mapKey(event.key);
+        if (chip8Key !== null) {
+          Module._setKeyState(chip8Key, 0);
+          event.preventDefault();
+        }
+      });
+
       // Utility function to append messages to the log window.
       function appendLog(message) {
         const logWindow = document.getElementById("logWindow");
@@ -179,7 +237,7 @@
             if (!running) return;
             Module._emulateCycle();
             render();
-            stepTimeoutId = setTimeout(step, 250);
+            stepTimeoutId = setTimeout(step, 10);
           }
           step();
         };
