--- a/chip-8-emulator/index.html
+++ b/chip-8-emulator/index.html
@@ -22,7 +22,7 @@
             class="w-full text-left px-2 py-1 hover:bg-gray-700 rounded"
           >
             Chip-8 Logo ROM
-        </button>
+          </button>
         </li>
         <li class="mb-2">
           <button
@@ -38,14 +38,17 @@
             class="w-full text-left px-2 py-1 hover:bg-gray-700 rounded"
           >
             Zero Demo ROM
+          </button>
+        </li>
       </ul>
     </div>
 
     <!-- Main Content -->
     <div class="flex-1 flex flex-col items-center pt-12">
       <div class="w-[844px] mx-auto">
-        <h1 class="text-3xl font-bold mb-6 text-center">CHIP-8 Emulator in C++</h1>
-
+        <h1 class="text-3xl font-bold mb-6 text-center">
+          CHIP-8 Emulator in C++
+        </h1>
         <div class="flex gap-4 items-start">
           <!-- Emulator Canvas -->
           <canvas
@@ -54,14 +57,12 @@
             height="320"
             class="border-4 border-white bg-black image-rendering-pixelated"
           ></canvas>
-
           <!-- Log window -->
           <div
             id="logWindow"
             class="border border-white bg-gray-800 p-2 text-xs overflow-y-auto min-w-[240px] w-[240px] h-[328px]"
           ></div>
         </div>
-
         <!-- Controls -->
         <div class="mt-6 flex flex-col sm:flex-row items-center gap-4">
           <input
@@ -92,97 +93,93 @@
     </div>
 
     <script>
-      //Helper function to map physical keys to CHIP-8 keys
-      function mapKey(key) {
-        switch (key.toLowerCase()) {
-          case "1":
-            return 0x1;
-          case "2":
-            return 0x2;
-          case "3":
-            return 0x3;
-          case "4":
-            return 0xC;
-          case "q":
-            return 0x4;
-          case "w":
-            return 0x5;
-          case "e":
-            return 0x6;
-          case "r":
-            return 0xD;
-          case "a":
-            return 0x7;
-          case "s":
-            return 0x8;
-          case "d":
-            return 0x9;
-          case "f":
-            return 0xE;
-          case "z":
-            return 0xA;
-          case "x":
-            return 0x0;
-          case "c":
-            return 0xB;
-          case "v":
-            return 0xF;
-          default:
-            return null;
-        }
-      }
+      // --- Optimized Key Event Listeners ---
 
-      //event listener for keydown
+      // Precomputed mapping: physical key (lowercase) -> CHIP-8 key
+      const keyMap = {
+        1: 0x1,
+        2: 0x2,
+        3: 0x3,
+        4: 0xc,
+        q: 0x4,
+        w: 0x5,
+        e: 0x6,
+        r: 0xd,
+        a: 0x7,
+        s: 0x8,
+        d: 0x9,
+        f: 0xe,
+        z: 0xa,
+        x: 0x0,
+        c: 0xb,
+        v: 0xf,
+      };
+
+      // Listen for keydown events.
       document.addEventListener("keydown", function (event) {
-        let chip8Key = mapKey(event.key);
-        if (chip8Key !== null) {
+        const chip8Key = keyMap[event.key.toLowerCase()];
+        if (chip8Key !== undefined) {
           Module._setKeyState(chip8Key, 1);
           event.preventDefault();
         }
       });
 
-      //event listener for keyup
+      // Listen for keyup events.
       document.addEventListener("keyup", function (event) {
-        let chip8Key = mapKey(event.key);
-        if (chip8Key !== null) {
+        const chip8Key = keyMap[event.key.toLowerCase()];
+        if (chip8Key !== undefined) {
           Module._setKeyState(chip8Key, 0);
           event.preventDefault();
         }
       });
 
-      // Utility function to append messages to the log window.
+      // --- Logging Functionality ---
+      // Append log messages to the log window but limit the total number of entries to 100.
       function appendLog(message) {
         const logWindow = document.getElementById("logWindow");
         const logEntry = document.createElement("div");
         logEntry.textContent = message;
-        logEntry.classList.add("mb-2"); // Add margin for spacing
+        logEntry.classList.add("mb-2");
         logWindow.appendChild(logEntry);
-        logWindow.scrollTop = logWindow.scrollHeight; // Auto-scroll
+        // Remove the oldest entry if we have more than 100 log entries.
+        while (logWindow.children.length > 100) {
+          logWindow.removeChild(logWindow.firstChild);
+        }
+        logWindow.scrollTop = logWindow.scrollHeight;
       }
 
       function resetEmulator() {
         stopEmulator();
         Module._reset();
-        //clear the log window
+        // Clear the log window.
         let logWindow = document.getElementById("logWindow");
         logWindow.innerHTML = "";
-        //clear the canvas
         let canvas = document.getElementById("chip8Canvas");
         let ctx = canvas.getContext("2d");
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        ctx.fillStyle = "black";
+        ctx.fillRect(0, 0, canvas.width, canvas.height);
         appendLog("Emulator has been reset!");
         appendLog("Load a ROM from the ROM List to get started!");
       }
 
       let running = false;
       let animationFrameId;
-      let stepTimeoutId;
+      let stepIntervalId;
+
+      // Create a persistent offscreen canvas for rendering.
+      const offscreenCanvas = document.createElement("canvas");
+      offscreenCanvas.width = 64;
+      offscreenCanvas.height = 32;
+      const offscreenCtx = offscreenCanvas.getContext("2d");
+
+      // Cache the display pointer from the WASM heap.
+      let displayBufferPtr = null;
 
       Module.onRuntimeInitialized = function () {
         appendLog("CHIP-8 Emulator loaded!");
         appendLog("Load a ROM from the ROM List to get started!");
 
-        // Override Module.print to send output to log window
+        // Override Module.print to send output to log window.
         Module.print = (function (oldPrint) {
           return function (text) {
             appendLog(text);
@@ -190,7 +187,7 @@
           };
         })(Module.print);
 
-        // Also log errors
+        // Also log errors.
         Module.printErr = (function (oldPrintErr) {
           return function (text) {
             appendLog("ERROR: " + text);
@@ -203,28 +200,38 @@
           appendLog("Emulator started!");
           running = true;
 
+          // Cache the display buffer pointer once.
+          if (!displayBufferPtr) {
+            displayBufferPtr = Module._getDisplay();
+          }
+
+          // Step function: run one CHIP-8 cycle.
+          function step() {
+            if (!running) return;
+            Module._emulateCycle();
+          }
+
+          // Run the step function at a fixed rate.
+          stepIntervalId = setInterval(step, 1000 / 60);
+
+          // Render continuously using requestAnimationFrame.
           function render() {
             if (!running) return;
-            let displayBuffer = Module._getDisplay();
-            let offscreenCanvas = document.createElement("canvas");
-            offscreenCanvas.width = 64;
-            offscreenCanvas.height = 32;
-            let offscreenCtx = offscreenCanvas.getContext("2d");
             let imageData = offscreenCtx.createImageData(64, 32);
-
+            const pixels = imageData.data;
             for (let i = 0; i < 64 * 32; i++) {
-              let color = Module.getValue(displayBuffer + i, "i8") ? 255 : 0;
-              imageData.data[i * 4] = color;
-              imageData.data[i * 4 + 1] = color;
-              imageData.data[i * 4 + 2] = color;
-              imageData.data[i * 4 + 3] = 255;
+              let pixelVal = Module.HEAPU8[displayBufferPtr + i];
+              let color = pixelVal ? 255 : 0;
+              let index = i * 4;
+              pixels[index] = color;
+              pixels[index + 1] = color;
+              pixels[index + 2] = color;
+              pixels[index + 3] = 255;
             }
-
             offscreenCtx.putImageData(imageData, 0, 0);
             let canvas = document.getElementById("chip8Canvas");
             let ctx = canvas.getContext("2d");
             ctx.imageSmoothingEnabled = false;
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
             ctx.drawImage(
               offscreenCanvas,
               0,
@@ -238,24 +245,18 @@
             );
             animationFrameId = requestAnimationFrame(render);
           }
-
-          function step() {
-            if (!running) return;
-            Module._emulateCycle();
-            render();
-            stepTimeoutId = setInterval(step, 1000/60);
-          }
-          step();
+          animationFrameId = requestAnimationFrame(render);
         };
 
         window.stopEmulator = function () {
           appendLog("Emulator stopped!");
           running = false;
-          clearInterval(stepTimeoutId);
+          clearInterval(stepIntervalId);
           cancelAnimationFrame(animationFrameId);
         };
       };
 
+      // ROM uploader event listener.
       document
         .getElementById("romUploader")
         .addEventListener("change", function (event) {
@@ -265,17 +266,12 @@
             reader.onload = function (e) {
               appendLog("ROM Loaded: " + file.name);
               let romData = new Uint8Array(e.target.result);
-
-              if (typeof Module._malloc === "undefined") {
-                console.error("ERROR: _malloc is undefined!");
-                appendLog("ERROR: _malloc is undefined!");
-                return;
+              // Allocate a persistent ROM buffer if not already done.
+              if (!window.romBuffer) {
+                window.romBuffer = Module._malloc(4096); // 4KB
               }
-
-              let ptr = Module._malloc(romData.length);
-              Module.HEAPU8.set(romData, ptr);
-              Module._loadROM(ptr, romData.length);
-              Module._free(ptr);
+              Module.HEAPU8.set(romData, window.romBuffer);
+              Module._loadROM(window.romBuffer, romData.length);
             };
             reader.readAsArrayBuffer(file);
           }
@@ -286,12 +282,11 @@
           const response = await fetch("roms/ibm-logo.ch8");
           const arrayBuffer = await response.arrayBuffer();
           const romData = new Uint8Array(arrayBuffer);
-
-          let ptr = Module._malloc(romData.length);
-          Module.HEAPU8.set(romData, ptr);
-          Module._loadROM(ptr, romData.length);
-          Module._free(ptr);
-
+          if (!window.romBuffer) {
+            window.romBuffer = Module._malloc(4096);
+          }
+          Module.HEAPU8.set(romData, window.romBuffer);
+          Module._loadROM(window.romBuffer, romData.length);
           appendLog("IBM Logo ROM loaded successfully");
         } catch (error) {
           console.error("Error loading IBM Logo ROM:", error);
@@ -301,15 +296,14 @@
 
       async function loadChip8Logo() {
         try {
-          const reponse = await fetch("roms/1-chip8-logo.ch8");
-          const arrayBuffer = await reponse.arrayBuffer();
+          const response = await fetch("roms/1-chip8-logo.ch8");
+          const arrayBuffer = await response.arrayBuffer();
           const romData = new Uint8Array(arrayBuffer);
-
-          let ptr = Module._malloc(romData.length);
-          Module.HEAPU8.set(romData, ptr);
-          Module._loadROM(ptr, romData.length);
-          Module._free(ptr);
-
+          if (!window.romBuffer) {
+            window.romBuffer = Module._malloc(4096);
+          }
+          Module.HEAPU8.set(romData, window.romBuffer);
+          Module._loadROM(window.romBuffer, romData.length);
           appendLog("Chip-8 Logo ROM loaded successfully");
         } catch (error) {
           console.error("Error loading Chip-8 Logo ROM:", error);
@@ -319,15 +313,16 @@
 
       async function loadZeroDemo() {
         try {
-          const reponse = await fetch("roms/Zero Demo [zeroZshadow, 2007].ch8");
-          const arrayBuffer = await reponse.arrayBuffer();
+          const response = await fetch(
+            "roms/Zero Demo [zeroZshadow, 2007].ch8"
+          );
+          const arrayBuffer = await response.arrayBuffer();
           const romData = new Uint8Array(arrayBuffer);
-
-          let ptr = Module._malloc(romData.length);
-          Module.HEAPU8.set(romData, ptr);
-          Module._loadROM(ptr, romData.length);
-          Module._free(ptr);
-
+          if (!window.romBuffer) {
+            window.romBuffer = Module._malloc(4096);
+          }
+          Module.HEAPU8.set(romData, window.romBuffer);
+          Module._loadROM(window.romBuffer, romData.length);
           appendLog("Zero Demo ROM loaded successfully");
         } catch (error) {
           console.error("Error loading Zero Demo ROM:", error);
